--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/1.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="O tym prezydencie USA można powiedzieć wiele. Można twierdzić, że unowocześnił ekonomię. Można powiedzieć, że obalił Związek Radziecki. Jednak trzeba przyznać, że potrafił pozyskać publikę. Właśnie za to został przez wielu ciepło zapamiętany."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      name="Dziennikarze zapytali go o rozmowy z orędownikiem walki z apartheidem. ”Jak przebiegało pańskie spotkanie z Tutu?” - zapytał ktoś. Reagan odparł: ”Tutu? So-So (ang.: tak sobie)”."
+      content="index, follow"
+    />
+    <meta name="handheldFriendly" content="true" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="https://twitter.com/AdamBabinicz" />
+    <meta
+      name="twitter:title"
+      content="Syn katolika i protestantki, hollywoodzki aktor z własną gwiazdą na słynnej alei i prezydent USA, żartowniś i człowiek z misją, wiekowy prezydent, borykający się z problemami zdrowotnymi i zdeterminowany wojownik, który chciał pokonać sowieckie „Imperium Zła”."
+    />
+    <meta
+      name="twitter:description"
+      content="Reagan ogłosił ograniczenie federalnej biurokracji. Przeprowadził znaczące cięcia budżetowe (głównie na polu programów socjalnych) i obniżył podatki, systematycznie powiększając za to budżet wojskowy (i dług publiczny)."
+    />
+    <meta name="twitter:image" content="https://oksydan.netlify.app/5.jpg" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Sukcesy na polu gospodarczym i międzynarodowym, a także sympatia obywateli, widoczna zwłaszcza po zamachu na jego życie z marca 1981 r., sprawiły, że mimo podeszłego wieku zdobył blisko 60 proc. głosów i zwyciężył swego konkurenta, Waltera Mondale’a, aż w 49 z 50 stanów."
+    />
+    <meta property="og:url" content="https://oksydan.netlify.app" />
+    <meta
+      property="og:description"
+      content="Co być może najbardziej zaskakujące, w jego polityce można zauważyć zarówno duszę artysty – kierującego się emocjami aktora – jak i sylwetkę zimnego, makiawelicznego kunktatora. Co jeszcze dziwniejsze, ta mieszanka dobrze funkcjonowała."
+    />
+    <meta property="og:image" content="https://oksydan.netlify.app/4.jpg" />
+    <link rel="canonical" href="https://oksydan.netlify.app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/3.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Ronald Reagan jeden z najlepszych prezydentów w historii USA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Woda",
+        "url": "https://oksydan.netlify.app",
+        "address": "Ronald Reagan",
+        "sameAs": [
+          "https://www.facebook.com/adam.gierczak.334",
+          "https://twitter.com/AdamBabinicz",
+          "https://github.com/AdamBabinicz"
+        ]
+      }
+    </script>
+    <script src="https://skrypt-cookies.pl/id/bc97833d298d0954.js"></script>
   </body>
 </html>
