--- a/public/index.html
+++ b/public/index.html
@@ -24,19 +24,25 @@
       name="twitter:description"
       content="Reagan ogłosił ograniczenie federalnej biurokracji. Przeprowadził znaczące cięcia budżetowe (głównie na polu programów socjalnych) i obniżył podatki, systematycznie powiększając za to budżet wojskowy (i dług publiczny)."
     />
-    <meta name="twitter:image" content="https://oksydan.netlify.app/5.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://ronald-reagan.netlify.app/5.jpg"
+    />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
       content="Sukcesy na polu gospodarczym i międzynarodowym, a także sympatia obywateli, widoczna zwłaszcza po zamachu na jego życie z marca 1981 r., sprawiły, że mimo podeszłego wieku zdobył blisko 60 proc. głosów i zwyciężył swego konkurenta, Waltera Mondale’a, aż w 49 z 50 stanów."
     />
-    <meta property="og:url" content="https://oksydan.netlify.app" />
+    <meta property="og:url" content="https://ronald-reagan.netlify.app" />
     <meta
       property="og:description"
       content="Co być może najbardziej zaskakujące, w jego polityce można zauważyć zarówno duszę artysty – kierującego się emocjami aktora – jak i sylwetkę zimnego, makiawelicznego kunktatora. Co jeszcze dziwniejsze, ta mieszanka dobrze funkcjonowała."
     />
-    <meta property="og:image" content="https://oksydan.netlify.app/4.jpg" />
-    <link rel="canonical" href="https://oksydan.netlify.app" />
+    <meta
+      property="og:image"
+      content="https://ronald-reagan.netlify.app/4.jpg"
+    />
+    <link rel="canonical" href="https://ronald-reagan.netlify.app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/3.png" />
 
     <title>Ronald Reagan jeden z najlepszych prezydentów w historii USA</title>
@@ -49,12 +55,12 @@
         "@context": "http://schema.org",
         "@type": "Organization",
         "name": "Woda",
-        "url": "https://oksydan.netlify.app",
+        "url": "https://ronald-reagan.netlify.app",
         "address": "Ronald Reagan",
         "sameAs": [
-          "https://www.facebook.com/adam.gierczak.334",
-          "https://twitter.com/AdamBabinicz",
-          "https://github.com/AdamBabinicz"
+          "https://www.facebook.com/RonaldReagan/about/?ref=page_internal",
+          "https://twitter.com/RonaldReagan/status/1436359255779590145",
+          "https://www.instagram.com/reaganfoundation"
         ]
       }
     </script>
