--- a/public/index.html
+++ b/public/index.html
@@ -65,5 +65,19 @@
       }
     </script>
     <script src="https://skrypt-cookies.pl/id/bc97833d298d0954.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-6R10XG0YR7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-6R10XG0YR7");
+    </script>
   </body>
 </html>
